better overflow behavior, but still some issues

--- a/sspi_flask_app/client/static/sass/data-widget.scss
+++ b/sspi_flask_app/client/static/sass/data-widget.scss
@@ -72,7 +72,7 @@ $black: rgb(42, 41, 43);
     transition: 0.1s;
 }
 
-.chart-container {
+.chart-canvas {
     position: relative;
     background-color: #AECC53;
     flex: 1 3 auto;
